--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h1>Data Engineer | Software Engineer | Photographer </h1>
                     <p ><span class="typing-text"></span></p>
                     <br><br>
-                    <a href="#portfolio" class="btn" id="homebtn">Check My Portfolio</a>
+                    <a href="#portfolio" class="btn" id="homebtn">See Portfolio</a>
                 </div>
             </div>
     
