fixing memory issues

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="box-container">
     
                 <div class="portfolio-item image project">
-                    <img src="assets/images/Portfolio/project3.mov" loading="lazy" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/project3.mp4" loading="lazy" alt="Portfolio-Image" />
                     <div class="content">
                         <h4>🎲 Project Caerus</h4>
                         <p>End-to-End Full-Stack Interactive LMIA Distribution Map</p>
@@ -122,7 +122,7 @@
                 </div>
     
                 <div class="portfolio-item image project">
-                    <img src="assets/images/Portfolio/project1.mov"  loading="lazy" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/project1.mp4"  loading="lazy" alt="Portfolio-Image" />
                     <div class="content">
                         <h4>🌅 Project Sunrise</h4>
                         <p>Fully Responsive Front End Restaurant Website</p>
