--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     <!-- Typed Script -->
     <script>
         var typed = new Typed('.typing-text', {
-            strings: ['<br># Welcome to my portfolio <br># I set up automated data pipelines and infrastructures<br># I code<br># I take pictures'],
+            strings: ['<br># Welcome to my portfolio <br># I set up automated data pipelines and infrastructures<br># I code<br># I take pictures&nbsp;'],
             typeSpeed: 1});
     </script>
 
