--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
                     <div class="info">
                         <h4>Data Engineer: <span>100%</span></h4>
                         <h4>Software Engineer: <span>definitely!</span></h4>
-                        <h4>Freelance Photographer: <span>yes!!!</span></h4>
+                        <h4>Freelance Web Developer: <span>yes!!!</span></h4>
+                        <h4>Freelance Photographer: <span>no doubt!</span></h4>
                         <a href="assets/resume.pdf" class="btn" download>Résumé <i class="fas fa-download"></i></a>
                         <a href="mailto:anh.phung@torontomu.ca?subject=Howdy, Viet Anh&body=I%20hope%20this%20email%20finds%20you%20well!%20You%20are%20awesome,%20let's%20connect!" class="btn">Mail<i class="fas fa-envelope"></i></a>
                     </div>
