--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 </div>
                 <p class="project">I write posts about project progress and technical issues on <a href="https://www.linkedin.com/in/connorphung/" target="_blank">LinkedIn</a></p>
             
+                <p class="photography">Follow me on <a href="https://www.instagram.com/connorsdailypic/" target="_blank">instagram</a> for more</p>
                 <div class="box-container">
                     <div class="portfolio-item image photography">
                         <img class="photography" src="assets/images/Portfolio/photography/photo1.jpg" loading="lazy" alt="Portfolio-Image" />
