--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <div id="homecontact">
                         <div class="social">
                             <a href="mailto:anh.phung@torontomu.ca?subject=Howdy, Viet Anh&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
-                            <a href="https://www.linkedin.com/in/connorphung/" class="fab fa-linkedin-in"></a>
-                            <a href="https://www.instagram.com/connorsdailypic/" class="fab fa-instagram"></a>
+                            <a href="https://www.linkedin.com/in/connorphung/" target="_blank" class="fab fa-linkedin-in"></a>
+                            <a href="https://www.instagram.com/connorsdailypic/" target="_blank" class="fab fa-instagram"></a>
                         </div>
                         <a href="#portfolio" class="btn" id="homebtn">Into My Work</a>
                         <a href="#about" class="btn" id="homebtn">About Me</a>
@@ -401,9 +401,9 @@
     <footer >
         <div class="social">
             <a href="mailto:anh.phung@torontomu.ca?subject=Howdy, Viet Anh&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
-            <a href="https://github.com/vietanhphung" class="fab fa-github"></a>
-            <a href="https://www.linkedin.com/in/connorphung/" class="fab fa-linkedin-in"></a>
-            <a href="https://www.instagram.com/connorsdailypic/" class="fab fa-instagram"></a>
+            <a href="https://github.com/vietanhphung" target="_blank" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/connorphung/" target="_blank" class="fab fa-linkedin-in"></a>
+            <a href="https://www.instagram.com/connorsdailypic/" target="_blank" class="fab fa-instagram"></a>
         </div>
 
         <div class="content">
