--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div class="box-container">  
                 <div class="portfolio-item image project" >
-                    <video autoplay loop muted class="vid">
+                    <video controls="false" autoplay loop muted class="vid">
                         <source src="assets/images/Portfolio/project3.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -140,7 +140,7 @@
                 </div>
     
                 <div class="portfolio-item image project">
-                    <video autoplay loop muted class="vid">
+                    <video controls="false" autoplay loop muted class="vid">
                         <source src="assets/images/Portfolio/project1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
