--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
              
-                <p class="project" id="text">I write posts about project progress and technical issues on <a href="https://www.linkedin.com/in/connorphung/" target="_blank" style="font-weight: bold; color: black;">LinkedIn <i class="fas fa-external-link-square-alt"></i></a></p>
+                <p class="project" id="text">I write posts about project progress, technical issues, and future improvements on <a href="https://www.linkedin.com/in/connorphung/" target="_blank" style="font-weight: bold; color: black;">LinkedIn <i class="fas fa-external-link-square-alt"></i></a></p>
             
                 <p class="photography" id="text">See more on <a href="https://www.instagram.com/connorsdailypic/" target="_blank" style="font-weight: bold; color: black;">Instagram <i class="fas fa-external-link-square-alt"></i></a> </p>
                 <div class="box-container">
