--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
 
                 <h2 id="greeting">Call me Connor!</h2>
                 <div>
-                    <button onclick="changeGreeting()" id="greetingbtn">How do my friends call me?</button>
+                    <button onclick="changeGreeting()" id="greetingbtn">If you want us to become friends instantly</button>
                 </div>
                 <p>I'm on a mission to use my technical skills to bring values to others so let's create something together!<br> I take street photos and passionate about psychology. 
                 <br> I also like everything duck, or more like an obsession because I could trade anything for a duck plush, but I'm working on it.
                 </p>
                 <script>
                 function changeGreeting() {
-                    document.getElementById("greeting").innerText = "It's Vanh.";
+                    document.getElementById("greeting").innerText = "Then call me Vanh!";
                     document.getElementById("greetingbtn").style.display = "none";
                 }
                 </script>
