--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                             <h4>🎲 Project Caerus</h4>
                             <p>End-to-end Interactive LMIA Distribution Map</p>
                             <ul>
-                                <li>Collect data from canada.ca Rest API, handled, transformed, formatted, and uploaded to MySQL remote server, followed Agile methodologies, closely monitored by a mentor.</li>
                                 <li>Used collected data to transform and update geographical coordinate data with Google Maps API to create an interactive map of Canada featuring the distribution trends of LMIA results.</li>
-                                <li>Implemented filter features to improve data analysis and simplified Bash commands using Make.</li>
+                                <li>Automated data collection from canada.ca Rest API, handled, transformed, formatted, and uploaded to MySQL remote server, followed Agile methodologies, closely monitored by a mentor.</li>
+                                <li>Implemented dynamic query filter features to improve data analysis and simplified Bash commands using Make.</li>
                                 <li>Set up a reverse proxy as a security feature to hide the IP address of the backend server.</li>
                                 <li>Skills and Technologies: Python, MySQL, SSH, Docker, Plotly, Pandas, Ubuntu, Linux Server, Nginx, Flask.</li>
                             </ul>
