--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         </div>
 
         <div class="content">
-            <p>Created by AS_Designs | Redesigned by Viet Anh Phung | All rights reserved</p>
+            <p>Inspired by AS_Designs | Redesigned by Viet Anh Phung | All rights reserved</p>
         </div>
     </footer>
     </section>
