--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <div class="portfolio-item image project" onclick="showContent(3)" style="cursor: pointer;">
                     
-                    <img src="assets/images/Portfolio/project4.jpeg.gif" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/project4.jpeg" alt="Portfolio-Image" />
                    
                         <div class="content" id="project3" >
                             <h4>🌎 Project Hermes - POC undergoing planning and development  </h4>
