--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <h4>Skill4skill</h4>
                             <p>a platform dedicated to connecting people in Canada who are eager to exchange skills and services within their communities </p>
                             <ul>
-                                <li>Backend Developer</li>
+                                <li>Role: Backend Developer</li>
                                 <li>Skills and Technologies: Python, MySQL, Linux Server, Flask.</li>
                             </ul>
                         </div>
@@ -120,7 +120,7 @@
                     <img src="assets/images/Portfolio/project4.jpeg" alt="Portfolio-Image" />
                    
                         <div class="content" id="project4" >
-                            <h4>🌎 Project Hermes - POC undergoing planning and development  </h4>
+                            <h4>🌎 Project Hermes - POC comming soon</h4>
                             <p>a platform that connects Vietnamese communities around the worlds</p>
                         </div>
                 </div>
