--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <h4>Software Engineer: <span>definitely!</span></h4>
                         <h4>Freelance Web Developer: <span>yes!!!</span></h4>
                         <h4>Freelance Photographer: <span>no doubt!</span></h4>
-                        <a href="assets/resume.pdf" class="btn" download>Resume<i class="fas fa-download"></i></a>
+                        <!--<a href="assets/resume.pdf" class="btn" download>Resume<i class="fas fa-download"></i></a>-->
                         </div>
 <!---
                     <div class="counting">
