--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <div class="portfolio-item image project" onclick="showContent(4)" style="cursor: pointer;">
                     
-                    <img src="assets/images/Portfolio/project4.jpeg" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/project4.png" alt="Portfolio-Image" />
                    
                         <div class="content" id="project4" >
                             <h4>🌎 Project Hermes - POC comming soon</h4>
