--- a/index.html
+++ b/index.html
@@ -246,15 +246,16 @@
             <div class="content">
 
                 <h2 id="greeting">Call me Connor!</h2>
+                <p>yes, that's right, I also go by Connor</p>
                 <div>
-                    <button onclick="changeGreeting()" id="greetingbtn">Give hint that you want to know me more on a personal level</button>
+                    <button onclick="changeGreeting()" id="greetingbtn">but if you're my friend...</button>
                 </div>
                 <p>I'm on a mission to use my technical skills to bring values to others so let's create something together!<br> I take street photos and passionate about psychology. 
                 <br> I also like everything duck, or more like an obsession because I could trade anything for a duck plush, but I'm working on it.
                 </p>
                 <script>
                 function changeGreeting() {
-                    document.getElementById("greeting").innerText = "Then call me Vanh!";
+                    document.getElementById("greeting").innerText = "Call me Vanh!";
                     document.getElementById("greetingbtn").style.display = "none";
                 }
                 </script>
