--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
                     <button onclick="changeGreeting()" id="greetingbtn">but if you're my friend...</button>
                 </div>
                 <p>I'm on a mission to use my technical skills to bring values to others so let's create something together!<br> I take street photos and passionate about psychology. 
-                <br> I also like everything duck, or more like an obsession because I could trade anything for a duck plush, but I'm working on it.
+                <br>I also enjoy making new friends and truly value meaningful relationships. Especially if you like ducks then we can be friends instantly!
+                <br> Hmm... I think it's kinda an obsession but I'm working on it.
                 </p>
                 <script>
                 function changeGreeting() {
