--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
                     <img src="assets/images/Portfolio/project5.png" alt="Portfolio-Image" />
                    
                         <div class="content" id="project5" >
-                            <h4>Skill4skill</h4>
+                            <h4>Skill4skill - Under development</h4>
                             <p>a platform dedicated to connecting people in Canada who are eager to exchange skills and services within their communities </p>
                             <ul>
                                 <li>Role: Backend Developer</li>
                                 <li>Skills and Technologies: Python, MySQL, Linux Server, Flask.</li>
                             </ul>
+                            <a  href="https://www.skilltopia.ca" target="_blank">Website<i class="fas fa-external-link-square-alt"></i></a>
                         </div>
                 </div>
 
