--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
 
         <div class="content">
-            <p>Inspired by AS_Designs | Redesigned by Viet Anh Phung | All rights reserved</p>
+            <p>Designed by Viet Anh Phung | All rights reserved</p>
         </div>
     </footer>
     </section>
