--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="portfolio-item image project" onclick="showContent(5)" style="cursor: pointer;">
                     
-                    <img src="assets/images/Portfolio/project5.jpg" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/project5.png" alt="Portfolio-Image" />
                    
                         <div class="content" id="project5" >
                             <h4>Skill4skill - Under development</h4>
