--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <br><br>
                     <div id="homecontact">
                         <div class="social">
-                            <a href="mailto:anh.phung@torontomu.ca?subject=Howdy, Viet Anh&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
+                            <a href="mailto:anh.phung@torontomu.ca?subject=vietanhphung.com - Hello Connor, let's connect!&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
                             <a href="https://www.linkedin.com/in/connorphung/" target="_blank" class="fab fa-linkedin-in"></a>
                             <a href="https://www.instagram.com/connorsdailypic/" target="_blank" class="fab fa-instagram"></a>
                         </div>
@@ -117,9 +117,10 @@
                         <ul>
                             <li>Role: Backend Developer</li>
                             <li>Skills and Technologies: FastAPI, Flink, Airflow, Kafka, Redis, Elastic Search, Docker, PostgreSQL, AWS S3</li>
+                            <li> Designed, documented, and developed core backend services for a system intended for nationwide deployment</li>
+                            <li>Optimized services to ensure independence, reliability, resource efficiency, and data integrity across system states.</li> 
                             <li>NDA signed for other details</li>
                         </ul>
-                        <a  href="https://exalate.com/" target="_blank">More about Exalate<i class="fas fa-external-link-square-alt"></i></a>
                     </div>
                 </div>
 
@@ -499,7 +500,7 @@
     <section class="contact" id="contact">
     <footer >
         <div class="social">
-            <a href="mailto:anh.phung@torontomu.ca?subject=Howdy, Viet Anh&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
+            <a href="mailto:anh.phung@torontomu.ca?subject=vietanhphung.com - Hello Connor, let's connect!&body=I%20hope%20this%20email%20finds%20you%20well!%20Let's%20connect!" class="fas fa-envelope"></a>
             <a href="https://github.com/vietanhphung" target="_blank" class="fab fa-github"></a>
             <a href="https://www.linkedin.com/in/connorphung/" target="_blank" class="fab fa-linkedin-in"></a>
             <a href="https://www.instagram.com/connorsdailypic/" target="_blank" class="fab fa-instagram"></a>
